# pfs-taylors-version

./: CLAUDE.md  INDEX.md  PLUGINS.md  PLUGINS.md.original-backup  PLUGINS.md.reconstructed  PLUGINS.md.true-original  README.md  ROADMAP.md  implementation-summary.md  phase-3-2-report.json  phase-4-3-report.json
.claude/: preferences-README.md  preferences.json
.claude/aesthetics/: manifest.json
.claude/agents/: dsp-agent.md  dsp-agent.md.backup  foundation-shell-agent.md  gui-agent.md.backup  research-planning-agent.md  validation-agent.md
.claude/commands/: continue.md  implement.md
.claude/hooks/: PostToolUse.sh  SubagentStop.sh
command-analysis/final-fixes-plans/: MANIFEST.md  reset-to-ideation-final-fix-plan.md
command-analysis/final-fixes-reports/: SUMMARY.md  reset-to-ideation-execution-report.md
implementation-notes/: express-mode-implementation-summary.md  express-mode-spec.md  express-mode-test-plan.md  express-mode-user-guide.md
plan/: phase-0-plan.md
plugins/AutoClip/: .continue-here.md  CMakeLists.txt
plugins/DriveVerb/: .continue-here.md
plugins/Drum808/: .continue-here.md  CMakeLists.txt
plugins/DrumRoulette/: CMakeLists.txt
plugins/FlutterVerb/: CHANGELOG.md
plugins/GainKnob/: .continue-here.md  CMakeLists.txt
plugins/LushPad/: .continue-here.md
plugins/LushVerb/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/LushVerb/.ideas/: .continue-here.md  parameter-spec.md
plugins/LushVerb/.ideas/mockups/: v3-integration-checklist.md
plugins/LushVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/LushVerb/Source/ui/public/: index.html
plugins/MinimalKick/: .continue-here.md
plugins/RadioMusic/: .continue-here.md
plugins/Scatter/: .continue-here.md
prompts/: 001-create-phase-implementation-plan.md  003-update-pluginval-path-comprehensively.md
research/: stage-renumbering-references.md
(+48 files in other folders)
